log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: logs-dir
          persistentVolumeClaim:
            claimName: log-output-claim
      containers:
        - name: log-writer
          image: benpp/log-writer:1.10
          volumeMounts:
            - name: logs-dir
              mountPath: /app/logs
        - name: log-server
          image: benpp/log-server:1.11
          volumeMounts:
            - name: logs-dir
              mountPath: /app/logs
